# streampp

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CODE_FORMATTING.md  README.md  build.sh  format-code.sh  format_code.py
.github/workflows/: README.md  build.yml
cmake/: FindFFmpeg.cmake
deploy/: windeployqt.ps1
deploy/InnoSetup/: installer.iss
resources/styles/: dark.qss
src/: main.cpp
src/core/capture/: CameraCapture.cpp  CameraCapture.h  ScreenCapture.cpp  ScreenCapture.h  VideoMixer.cpp  VideoMixer.h
src/core/config/: ConfigManager.cpp  ConfigManager.h
src/core/encoder/: EncoderManager.cpp  EncoderManager.h
src/core/recorder/: LocalRecorder.cpp  LocalRecorder.h
src/core/streamer/: Streamer.cpp  Streamer.h
src/ui/: MainToolbar.cpp  MainToolbar.h
tasks/: all.md
